add vuex, update most logic

--- a/src/template.html
+++ b/src/template.html
@@ -12,6 +12,8 @@
 	<div id="app"></div>
 	<% if (process.env.NODE_ENV === 'production') { %>
 		<script src="https://cdn.bootcss.com/vue/2.1.10/vue.min.js"></script>
+		<script src="https://cdn.bootcss.com/vuex/2.2.1/vuex.min.js"></script>
+		<script src="https://cdn.bootcss.com/vue-router/2.3.0/vue-router.min.js"></script>
 	<% } %>
 </body>
 </html>
